@@ -1,3 +1,5 @@
+* render_parent is replaced with render :parent (works for normal templates and partials)
+
 * Removed render_parent for now (in edge rails version)
 
 * inherit_views allows inherited templates to be rendered where there is no action method
